--- a/styles.css
+++ b/styles.css
@@ -4,89 +4,53 @@
   }
   
   body {
-    background-color: #75543b;
+    background-color: #75543B;
   }
-  
-  .home-header {
-    background-color: #59402c;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 60px;
-    flex-wrap: wrap;
-  }
-  
-  .line {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 10px;
-    padding-top: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .res-header {
-    background-color: #59402c;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .port-header {
-    background-color: #59402c;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  .pers-header {
-    background-color: #59402c;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
-  ul {
+
+  .nav_bar {
+    background-color: #75543B;
     list-style-type: none;
-    background-color: #75543b;
-    padding: 10px;
+    padding: 50px 120px;
     text-align: right;
   }
   
-  li {
+  .nav_bar li {
     display: inline;
   }
-  
-  li a {
-    text-decoration: none;
-    color: #faf5ed;
-    font-size: 1.3em;
-    padding: 9px;
-    font-family: 'Source Sans Pro', sans-serif;
-  }
-  
-  #home-img {
-    width: 25em;
-    length: 25em;
-  /*   border: 4px solid #EBEFF0; */
-  }
-  
-  h1 {
-    color: #EBEFF0;
-    font-family: 'Indie Flower', cursive;
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    font-size: 45px;
-  }
     
-  h2 {
+  .nav_bar li a {
+    color: #FaF5ED;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.4em;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 0px 25px;
+  }
+
+  .nav_bar li a:hover {
+    color: #F2C784;
+    transition: color 0.5s;
+  }
+  
+  #home-header {
+    background-color: #59402C;
     display: flex;
-    color: #e3e3e3;
-    font-family: 'Indie Flower', cursive;
-    font-size: 42px;
-    padding-left: 30px;
-    padding-top: 30px;
-    flex-shrink: 10;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 60px 240px;
+    flex-wrap: wrap;
+  }
+
+  .header {
+    background-color: #59402C;
+    padding: 80px 0px;
+    text-align: center;
+  }
+   
+  h1 {
+    color: #F2C784;
+    font-family: 'Indie Flower';
+    font-size: 45px;
   }
   
   h3 {
@@ -139,6 +103,15 @@
     padding-bottom: 8px;
     padding-left: 104px;
     padding-right: 85px;
+  }
+
+  .line {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+    padding-top: 20px;
+    flex-wrap: wrap;
   }
   
   #linkedin {
