--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,9 @@
   }
 
   h4 {
-    color: #FAF5ED;
+    color: #F5C7A9;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 15px;
+    font-size: 20px;
   }
   
   h5 {
@@ -115,11 +115,7 @@
     padding-right: 85px;
   }
 
-  .intro {
-    text-align: center;
-  }
-
-  .intro_line {
+  .home_line {
     border: 1px solid #F2C784;
     width: 200px;
     margin-top: 35px;
@@ -128,24 +124,24 @@
     margin-left: auto;
   }
 
-  .intro a {
+  .body a {
     color: #FAF5ED;
     text-decoration: none;
   }
 
-  .intro a:hover {
+  .body a:hover {
     color: #F2C784;
     transition: color 0.5s;
   }
 
   @media only screen and (min-width: 1450px) {
-    .intro {
+    .body {
       padding: 70px 270px 5px 270px;
     }
   }
 
   @media only screen and (min-width: 1050px) {
-    .intro {
+    .body {
       padding: 50px 200px 0px 200px;
     }
   }
@@ -160,7 +156,7 @@
     .nav_line {
       margin-left: 20px;
     }
-    .intro {
+    .body {
       padding: 50px 100px 0px 100px;
     }
   }
@@ -181,7 +177,7 @@
     #me-img {
       width: 352px;
     }
-    .intro {
+    .body {
       padding: 50px 80px 0px 80px;
     }
     h1 {
@@ -194,7 +190,7 @@
       font-size: 14px;
     }
     h4 {
-      font-size: 12px;
+      font-size: 16px;
     }
   }
 
@@ -205,16 +201,19 @@
     .nav_bar li a {
       padding: 0px 13px;
     }
+    .nav_line {
+      margin-left: 12px;
+    }
     #home-header {
       padding: 50px 20px;
     }
     #me-img {
       width: 302px;
     }
-    .intro {
+    .body {
       padding: 50px 60px 0px 60px;
     }
-    .intro_line {
+    .home_line {
       width: 150px;
     }
   }
@@ -227,7 +226,7 @@
       font-size: 12px;
     }
     h4 {
-      font-size: 10px;
+      font-size: 14px;
     }
   }
   
