responsive navigation bar/menu

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@
     margin-left: 24px;
   }
 
+  .menu {
+    display: none;
+  }
+
   .header {
     background-color: #59402C;
     padding: 80px 0px;
@@ -164,6 +168,9 @@
       margin-left: 16px;
       border-width: 0.5px;
     }
+    .header {
+      padding: 40px 0px;
+    }
     #me-img {
       width: 352px;
     }
@@ -197,6 +204,9 @@
     .nav_line {
       margin-left: 12px;
     }
+    .header {
+      padding: 20px 0px;
+    }
     #home-header {
       padding: 50px 20px;
     }
@@ -205,6 +215,9 @@
     }
     .body {
       padding: 50px 50px 0px 50px;
+    }
+    #resume_body, #projects_body {
+      margin-top: -30px;
     }
     .home_line {
       width: 150px;
@@ -215,6 +228,38 @@
   }
 
   @media only screen and (max-width: 500px) {
+    .nav_bar {
+      padding: 60px 50px 20px 35px;
+    }
+    .nav_bar li {
+      display: block;
+      padding: 10px 0px;
+    }
+    .nav_bar li a {
+      display: flex;
+      justify-content: left;
+      padding: 0px;
+    }
+    .nav_line {
+      margin-left: -2px;
+    }
+    .nav_menu {
+      padding: 20px 30px 20px;
+      display: flex;
+    }
+    nav {
+      position: absolute;
+      top: -100%;
+      transition: 0.25s ease-in-out;
+    }
+    nav.active {
+      top: 0;
+    }
+    .menu {
+      display: block;
+      z-index: 2;
+      color: #FAF5ED;
+    }
     .body {
       padding: 50px 40px 0px 40px;
     }
