--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,12 @@
     font-size: 20px;
   }
 
+  h6 {
+    color: #FAF5ED;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
+  }
+
   .home_line {
     border: 1px solid #F2C784;
     width: 200px;
@@ -177,6 +183,9 @@
     .body {
       padding: 50px 80px 0px 80px;
     }
+    #resume_body, #projects_body, #exploration_body {
+      margin-top: -30px;
+    }
     h1 {
       font-size: 30px;
     }
@@ -191,6 +200,9 @@
     }
     h5 {
       font-size: 15px;
+    }
+    h6 {
+      font-size: 11px;
     }
   }
 
@@ -215,9 +227,6 @@
     }
     .body {
       padding: 50px 50px 0px 50px;
-    }
-    #resume_body, #projects_body {
-      margin-top: -30px;
     }
     .home_line {
       width: 150px;
@@ -274,6 +283,9 @@
     }
     h5 {
       font-size: 13px;
+    }
+    h6 {
+      font-size: 9px;
     }
     .resume_line {
       border: 0.5px solid #FAF5ED;
