--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,10 @@
   }
 
   #me-img {
-    width: 432px;
+    width: 320px;
+    height: 320px;
+    object-fit: cover;
+    border-radius: 50%;
     margin: 15px 50px;
   }
    
@@ -134,15 +137,12 @@
     margin-left: 25px;
   }
 
-  @media only screen and (min-width: 1450px) {
-    .body {
-      padding: 70px 270px 5px 270px;
-    }
-  }
-
   @media only screen and (min-width: 1050px) {
     .body {
       padding: 50px 200px 0px 200px;
+    }
+    #intro_body {
+      padding: 50px 260px 0px 260px;
     }
   }
 
@@ -178,7 +178,8 @@
       padding: 40px 0px;
     }
     #me-img {
-      width: 352px;
+      width: 270px;
+      height: 270px;
     }
     .body {
       padding: 50px 80px 0px 80px;
@@ -221,9 +222,6 @@
     }
     #home-header {
       padding: 50px 20px;
-    }
-    #me-img {
-      width: 302px;
     }
     .body {
       padding: 50px 50px 0px 50px;
@@ -268,6 +266,10 @@
     }
     nav.active {
       top: 0;
+    }
+    #me-img {
+      width: 240px;
+      height: 240px;
     }
     .body {
       padding: 50px 40px 0px 40px;
