--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@
     font-size: 15px;
   }
 
-  .home_line {
+  .home_line, .projects_line {
     border: 1px solid #F2C784;
     width: 200px;
     margin-top: 35px;
